syntax = "proto3";

import "aelf/core.proto";
import "aelf/options.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "AElf.Contracts.BingoContract";

service BingoContract {
    option (aelf.csharp_state) = "AElf.Contracts.BingoContract.BingoContractState";
    
    // Actions
    // Buy or Bet 
    rpc Play (PlayInput) returns (google.protobuf.Int64Value) {
    }
    // Waiting few seconds, you can draw the prize.
    // Play -> waiting seconds -> Bingo
    rpc Bingo (aelf.Hash) returns (BingoOutput) {
    }
    rpc Quit (google.protobuf.Empty) returns (google.protobuf.Empty) {
    }
    
    // Views
    rpc GetAward (aelf.Hash) returns (google.protobuf.Int64Value) {
        option (aelf.is_view) = true;
    }
    rpc GetPlayerInformation (aelf.Address) returns (PlayerInformation) {
        option (aelf.is_view) = true;
    }
    rpc GetPlayerInformationCompleted (aelf.Address) returns (PlayerInformation) {
        option (aelf.is_view) = true;
    }
}

message PlayInput {
    int64 buy_amount = 1;
    int64 buy_type = 2; // type = {1: small, 2: big}
    string token_symbol = 3;
}

message BingoOutput {
    int64 random = 1;
    bool is_win = 2;
    int64 bout_type = 3;
    int64 award = 4;
}

message PlayerInformation {
    aelf.Hash seed = 1;
    repeated BoutInformation bouts = 2;
    google.protobuf.Timestamp register_time = 3;
}

message BoutInformation {
    int64 play_block_height = 1;
    int64 amount = 2;
    int64 award = 3;
    bool is_complete = 4;
    aelf.Hash play_id = 5;
    int64 bingo_block_height = 6;
    int64 bout_type = 7;
    string token_symbol = 8;
    int64 lottery_code = 9;
    google.protobuf.Timestamp bet_time = 10;
}