syntax = "proto3";

import "aelf_options.proto";
import "google/protobuf/empty.proto";
import "common.proto";

option csharp_namespace = "HelloWorldContract";

service HelloWorldContract {

    option (aelf.csharp_state) = "HelloWorldContractState";

    rpc InitializeHelloContract (InitializeHelloContractInput) returns (google.protobuf.Empty) {}

    rpc Hello (google.protobuf.Empty) returns (HelloReturn) { }
}

message InitializeHelloContractInput {
    Hash token_contract_system_name = 1;
}

message HelloReturn {
    string Value = 1;
}
